Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 20. 09. 2021</h5>
+<h5>Úterý, 21. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a vejcem</strong>
@@ -50,34 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 20.9.2021</div>
+<div class="nadpis">Úterý 21.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">Bramborová polévka s houbami a majoránkou v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">Bramborová polévka s houbami a majoránkou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí ve sweet chilli omáčce, karotka, nakládaná cibulka, jasmínová rýže, černý sezam <em title="Obiloviny obsahující lepek">1</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaný steak z krkovice, pečené grenaille na bylinkách a česneku, jablka s křenem a řepou <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Bramborové noky s dýňovou omáčkou, parmazán, pražená semínka, rukola <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -88,13 +63,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dýňový krém se šlehačkou a praženými semínky</td><td class="menuPrice">47,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami a vařeným vejcem</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem, hořčice, cibule</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Smažená vinná klobása, vařené brambory s máslem, salát coleslav</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, kynuté houskové knedlíky a bramborové šišky, dušený špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské vepřové rizoto, strouhaný sýr, kyselá okurka</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, dýńové pyré, grilovaná brokolice s karotkou</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine na jemné smetanové omáčce s nivou a anglickou slaninou, strouhaný parmazán</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na houbové omáčce, dušená jasmínová rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecími nudličkami s česnekovým dresinkem a zeleninou,smažené bramborové hranolky, zakysaná smetana</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listu a zeleniny promíchaný majonézovým dresinkem, dorůžova pečená vepřová panenka, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Steak z vepřové pečeně na pepřové redukci, pečené brambory s kmínem, volské oko</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na houbách, dušená rýže</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec na paprice, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Smažené holandské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Filirovaná vepřová panenka, fazolové lusky s anglickou slaninou, celerové a batátové hranolky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kapsa z vepřové pečeně plněná anglickou slaninou, nivou a vařeným vejcem pečená na roštu, vařené brambory s máslem a šnitlíkem, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné kari omáčce, restované špecle</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuskusový salát s sušenými rajčaty, olivami a rukolou ochucený citrónovým dresinkem, plátkovaná kuřecí prsa</td><td class="menuPrice">132,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -139,12 +120,17 @@
 </table>
 </td>
 </tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Kuřecí vývar se zeleninou a fritátovými nudlemi 1,3,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Pečená vepřová krkovice po selsku s červeným zelím a našimi bramborovými knedlíky 1a,3,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí burger v naší bulce s anglickou slaninou, čedarem, ledovým salátem, rajčaty a červenou cibulí s americkými brambory a medovo hořčičnou majonézou 1a,3,7,10,11</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">120g</td><td class="title">Mozzarella Buffala balená v parmské šunce na zeleninovém salátu s trhanými listy, bazalkovým pestem a rozpečenou bagetou 1a,3,7,12</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+</td>
+</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Cerstve slavky po thajsku s kokosovym mlekem, citronovou travou, zeleninou, cerstvym chilli a korinadrem, ryzove nudle 139 {nevejde se do vratne krabicky}</li><li>Peceny filet z cerstve tresky s omackou aiolli, pecene brambory, salatek 169</li><li>Pomalu dusene hovezi ve sladke a vonave omacce s hoisin, zazvorem a korenim peti vuni, jasminova ryze, salatek  139</li><li>Rostbif z jeleni kyty s peprovou omackou, pecene brambory, salatek {L} 169</li><li>Bramborove gnocchi s ratatouille z pecene zeleniny a parmezanem, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 139</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou a zelenymi bylinkami 169</li><li>Thajske cervene kari s krutim masem, pak coj, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 139</li><li>Burritos se srncimi nudlickami s fazolemi, pecenymi palivymi paprikami, rajcaty a chipotle, pecene brambory, jogurtovy dip, salatek {L} 169</li><li>Ful medames – egyptske boby se zeleninou, bylinkami, zaatarem a sazenym vejcem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
