Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,17 +14,17 @@
 						</span>
 </p>
 <p>
-<strong>Dušené hovězí na víně s rýží</strong>
+<strong>Domácí sekaná s vařeným bramborem, hořčicí a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							125,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s bazalkovo-tomatovou omáčkou , kuřecím masem a parmazánem</strong>
+<strong>Caesar salát s kuřecím masem, krutony a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
