--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,7 +7,7 @@
 <h5>Úterý, 21. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a vejcem</strong>
+<strong>Zeleninová polévka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
