Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Středa, 22. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová polévka</strong>
+<strong>Fazolová s paprikou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Domácí sekaná s vařeným bramborem, hořčicí a okurkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							125,-
-						</span>
-</p>
-<p>
-<strong>Caesar salát s kuřecím masem, krutony a parmazánem</strong>
+<strong>Selská kotleta s cibulkou, slaninou, smetanou a hranolkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
+						</span>
+</p>
+<p>
+<strong>Kuřecí stehno tandoori s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							125,-
 						</span>
 </p>
 <p>
