Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -190,7 +190,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Spagety s cerstvymi slavkami a omackou Puttanesca {rajcata, kapary, ancovicky, olivy, cesnek, petrzelka} 139</li><li>Peceny filet z cerstveho norskeho lososa s pecenymi rajcaty a petrzelkovym pestem, pohanka se smazenou cibulkou, salatek 169</li><li>Burrito s mexickym carnitas {trhane veprove} s goudou, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Indicka jehneci kofta korma s kokosovym mlekem, bylinkami a orisky, zeleninove birjany z basmati ryze, salatek 165</li><li>Indicka kvetakova pakora s koriandrem a panc phoron, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Spagety s cerstvymi slavkami a omackou Puttanesca {rajcata, kapary, ancovicky, olivy, cesnek, petrzelka} ( L)  139</li><li>Peceny filet z cerstveho norskeho lososa s pecenymi rajcaty a petrzelkovym pestem, pohanka se smazenou cibulkou, salatek 169</li><li>Burrito s mexickym carnitas {trhane veprove} s goudou, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Indicka jehneci kofta korma s kokosovym mlekem, bylinkami a orisky, zeleninove birjany z basmati ryze, salatek 165</li><li>Indicka kvetakova pakora s koriandrem a panc phoron, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
