--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 22. 09. 2021</h5>
+<h5>Čtvrtek, 23. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Fazolová s paprikou</strong>
@@ -50,69 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 22.9.2021</div>
+<div class="nadpis">Čtvrtek 23.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Květákový krém s tahini a citronovou šťávou v menu <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Květákový krém s tahini a citronovou šťávou samostatně <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>350g Lasagně bolognese, tomatová máčka, rukolový salát <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová panenka, bramborová kaše se zauzeným česnekem, řeřicha <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Palačinky plněné ratatouille zeleninou a cheddar sýrem, variace listových salátů <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Šopský salát s olivami <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát s ananasem </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Drobenkový koláč s lesním ovocem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">9. </span>100g Čokoládový koláč <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">10. </span>100g Punčový dort <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -123,16 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se šunkou a chlebovými krutony</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Brokolicový krém se šlehačkou, toustovými nudličkami a bramborovými chipsy</td><td class="menuPrice">47,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Vepřové kostky v mrkvi, dušená jasmínová rýže</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo s naši půlmetrovou norimberskou klobásou (96% masa, bezlepková) kyselá okurka, škvarky s cibulí, volský oko</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu s pórkem, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Plátkovaná kuřecí prsa s rajčaty a mozzarelou zakápnuté bazalkovým pestem, celerové pyré, vařené vejce</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se šunkou, hráškem zjemněné smetanou, plátkovaná vepřová panenka, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný caesar dresinkem, nudličky z kuřecích prsou, hoblinky parmazánu, krutony </td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Plněné bramborové knedlíky s vepřovým masem, dušené bílé zelí, smažená cibulka na sádle</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kýta na slanině, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená krkovička na česneku, bramborové knedlíky, špenát</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu, smažené bramborové plátky, tatarka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: Moravské uzené z tálu na jemné smetanové omáčce s křenem a hořčičí, mačkané celerové brambory s pórkem a máslem, volské oko</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Asijská pikantní kuřecí nudličky se zeleninou, dušená jasmínová rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou s moravským uzeným a hermelínem, smažené bramborové plátky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem s plátky dorůžova pečené vepřové panenky, vařené vejce</td><td class="menuPrice">133,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -178,6 +118,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Česnečka z uzených žebírek se smaženými chlebovými krutony 1ab</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Husarská vepřová roláda s bramborovou kaší a rajčatovým salátem 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Krůtí medailonky s bylinkovým máslem, grilovanou zeleninou a pečenou bramborou ve slupce 1a,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety po uhlířsku s anglickou slaninou, smetanou, žloutky, petrželkou a sýrem Forte Classico 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
