--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -185,7 +185,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Spagety s cerstvymi slavkami a omackou Puttanesca {rajcata, kapary, ancovicky, olivy, cesnek, petrzelka} ( L)  139</li><li>Peceny filet z cerstveho norskeho lososa s pecenymi rajcaty a petrzelkovym pestem, pohanka se smazenou cibulkou, salatek z cervene repy 169</li><li>Burrito s mexickym carnitas {trhane veprove} s goudou, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Indicka jehneci kofta korma s kokosovym mlekem, bylinkami a orisky, zeleninove birjany z basmati ryze, salatek 165</li><li>Indicka kvetakova pakora s koriandrem a panc phoron, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny atlanticky hejk s citronem a susenymi rajcaty v olivovem oleji, libanonsky krupkovy salat s petrzelkou, citrony a cervenymi fazolemi {L}139</li><li>Peceny filet z cerstveho halibuta s citronem a susenymi rajcaty v olivovem oleji, libanonsky krupkovy salat s petrzelkou, citrony a cervenymi fazolemi {L} 169</li><li>Korejske restovane veprove nudlicky se zelenymi fazolkami, thajskou bazalkou a sezamem a miso, jasminova ryze, pikantni cukemono 139</li><li>Smazene rizecky z koroptvich prsou, stouchane brambory s kapustou, salatek, citron {L} 169</li><li>Indicky dal z cervene cocky s lilky, rajcaty a balkanskym syrem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
