--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,32 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 24.9.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Česnekový krém s chlebovými krutony samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Česnekový krém s chlebovými krutony v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Ragú z vepřové panenky se smetanou a sušenými rajčaty, pečené brambory grenaille <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí tikka masala s koriandrem, dušená rýže, česnekový chléb naan <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Quiche zapečený se zeleninou a  sýrem, hruškový salát <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +155,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s citronem a susenymi rajcaty v olivovem oleji, libanonsky krupkovy salat s petrzelkou, citrony a cervenymi fazolemi {L}139</li><li>Peceny filet z cerstveho halibuta s citronem a susenymi rajcaty v olivovem oleji, libanonsky krupkovy salat s petrzelkou, citrony a cervenymi fazolemi {L} 169</li><li>Korejske restovane veprove nudlicky se zelenymi fazolkami, thajskou bazalkou a sezamem a miso, jasminova ryze, pikantni cukemono 139</li><li>Smazene rizecky z koroptvich prsou, stouchane brambory s kapustou, salatek, citron {L} 169</li><li>Indicky dal z cervene cocky s lilky, rajcaty, spetkou chilli a balkanskym syrem, arabske placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Paella s chobotnici, slavkami, lososem, zeleninou a zelenymi bylinkami, salatek 169</li><li>Palive a vonave goanske vindalu s krutim masem, bramborami, garam masala a paprickami Bhut Jolokia, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho rostence s krenovou majonezou, gratinovane brambory, salatek 169</li><li>Pecene tofu ve sladkokysele omacce s kvetakem, paprikami, rajcaty a zazvorem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
