Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 24. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Brokolicová</strong>
+<strong>Vývar se zeleninou a hovězím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							125,-
-						</span>
-</p>
-<p>
-<strong>Vepřový perkelt s rýží</strong>
+<strong>Krkovička Pečená na černém pivku s rýží nebo těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
+						</span>
+</p>
+<p>
+<strong>Trhanec se sladkým tvarohem a borůvkami</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							105,-
 						</span>
 </p>
 <p>
@@ -155,7 +155,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Paella s chobotnici, slavkami, lososem, zeleninou a zelenymi bylinkami, salatek 169</li><li>Palive a vonave goanske vindalu s krutim masem, bramborami, garam masala a paprickami Bhut Jolokia, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho rostence s krenovou majonezou, gratinovane brambory, salatek 169</li><li>Pecene tofu ve sladkokysele omacce s kvetakem, paprikami, rajcaty a zazvorem, jasminova ryze 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Paella s chobotnici, slavkami, lososem, zeleninou a zelenymi bylinkami, salatek 169</li><li>Palive a vonave goanske vindalu s krutim masem, bramborami, garam masala a paprickami Bhut Jolokia, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho rostence s krenovou majonezou, gratinovane brambory, salatek 169</li><li>Pecene tofu ve sladkokysele omacce s kvetakem, paprikami, rajcaty a zazvorem, jasminova ryze {veganske] 139</li></ol>
 </td>
 </tr>
 </table>
