Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -159,4 +159,11 @@
 </td>
 </tr>
 </table>
+<table>
+<tr><th>Čínská restaurace YOUYOUGE<br><a href="https://www.jidlonawebu.cz/122436">https://www.jidlonawebu.cz/122436</a></th></tr>
+<tr>
+<td>
+</td>
+</tr>
+</table>
 </table></html>
