Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,41 +4,13 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 24. 09. 2021</h5>
+<h5>Sobota, 25. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a hovězím masem</strong>
+<strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							33,-
-						</span>
-</p>
-<p>
-<strong>Krkovička Pečená na černém pivku s rýží nebo těstovinou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							127,-
-						</span>
-</p>
-<p>
-<strong>Trhanec se sladkým tvarohem a borůvkami</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							105,-
-						</span>
-</p>
-<p>
-<strong>Teplý bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							35,-
-						</span>
-</p>
-<p>
-<strong>Salátový bufet:</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							45,-
+							0,-
 						</span>
 </p>
 </div>
@@ -50,34 +22,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 24.9.2021</div>
+<div class="nadpis">Sobota 25.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Česnekový krém s chlebovými krutony samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Česnekový krém s chlebovými krutony v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Ragú z vepřové panenky se smetanou a sušenými rajčaty, pečené brambory grenaille <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Krůtí tikka masala s koriandrem, dušená rýže, česnekový chléb naan <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Quiche zapečený se zeleninou a  sýrem, hruškový salát <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -88,13 +35,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s uzeným masem</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec po srbsku, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cmunda po kaplicku ( uzená moravská kýta se zelím v bramboráku) </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Katův vepřový šleh s cibulí a feferonkou, smažené bramborové hranolky</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Restovaná kuřecí játra s cibulkou a anglickou slaninou, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Filírováná vepřová panenka pečená dorůžova, brokolicové pyré zjemněné máslem, grilované rajče sypané parmazánem</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené zeleninové karbanátky se sýrem, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kapsa z vepřové kotlety bez kosti na grilu plněná šunkou, nivou a kapiemi, smažené bramborové plátky, mexický dip</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovým karé, míchanými vejci na cibulce, trhanými salátovými listy, kyselou okurkou a sýrovým dresinkem, hranolky, česnekový dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný americkým dresinkem, řezy z vepřové panenky, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dýňová se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">200g</td><td class="menuName">Dušené vepřové kostky v mrkvi, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu se šunkou, grilované brambory, mexický dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, dýňové pyré, grilovaná paprika, plátky anglické slaniny, strouhaný parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou s jemnou kari omáčkou, smažené hranolky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s jemnou omáčkou z modrého sýra a anglické slaniny, strouhaný parmazán</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený olivovým olejem, hermelín v těstíčku, vařené vejce</td><td class="menuPrice">133,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -143,6 +93,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
